app - Add map to project

--- a/maps/index.html
+++ b/maps/index.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-
-<body>
-  <script src="./src/index.ts" type="module"></script>
-</body>
-
+  <body>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDowSjEG4Im1alZ9v8nBkLcyBPsIjJ3x9E&callback=Function.prototype"></script>
+    <script src="./src/index.ts" type="module"></script>
+  </body>
 </html>
